--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -217,3 +217,65 @@
     z-index: 1;
   }
 }
+
+.cardContainer {
+  margin: 1.5rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 0.7fr));
+  gap: 1.5rem;
+  bottom: 0;
+}
+
+@media only screen and (max-width: 1100px) {
+  .cardContainer {
+    display: none;
+  }
+
+  .right {
+    display: none;
+  }
+}
+
+.card {
+  background: var(--transparent-bg);
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  cursor: pointer;
+  padding-right: 0%;
+}
+
+.card:hover {
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+  padding: 1rem;
+  border-radius: 0 0 20px 20px;
+}
+
+.content p {
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem 0 0.5rem;
+}
+
+.tags span {
+  margin: 0.5rem 0.5rem 0 0;
+  padding: 0.2rem 0.5rem;
+  border-radius: 20px;
+  font-size: 0.75rem;
+  transition: all 0.2s;
+}
+
+.picture_boader {
+  border: 10px solid rgba(64, 102, 97, 0.5);
+  border-radius: 250px;
+  object-fit: cover;
+}
