--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,79 +9,174 @@
 }
 
 /* Tags */
-.react {
-  border: 0.1rem solid rgb(97, 218, 251);
+.wrapper {
+  background: rgb(0, 0, 0);
 }
-.react:hover {
-  background: rgba(97, 218, 251, 0.25);
+.wrapper:hover {
+  background: rgba(0, 0, 0, 0.25);
 }
-
-.node {
-  border: 0.1rem solid rgb(131, 205, 41);
+.yaml {
+  border: 0.1rem solid rgb(0, 0, 0);
 }
-.node:hover {
-  background: rgba(131, 205, 41, 0.25);
+.yaml:hover {
+  background: rgba(0, 0, 0, 0.25);
 }
-
-.mongodb {
-  border: 0.1rem solid rgb(67, 153, 52);
+.configuration {
+  border: 0.1rem solid rgb(0, 0, 0);
 }
-.mongodb:hover {
-  background: rgba(67, 153, 52, 0.25);
+.configuration:hover {
+  background: rgba(0, 0, 0, 0.25);
 }
-
-.redux {
-  border: 0.1rem solid rgb(118, 74, 188);
+.logger {
+  border: 0.1rem solid rgb(0, 0, 0);
 }
-.redux:hover {
-  background: rgba(118, 74, 188, 0.25);
+.logger:hover {
+  background: rgba(0, 0, 0, 0.25);
 }
-
-.razorpay {
-  border: 0.1rem solid rgb(82, 143, 240);
+.termcolor {
+  border: 0.1rem solid rgb(255, 0, 200);
 }
-.razorpay:hover {
-  background: rgba(82, 143, 240, 0.25);
+.termcolor:hover {
+  background: rgba(255, 0, 200, 0.25);
 }
 
-.material-ui {
-  border: 0.1rem solid rgb(25, 118, 210);
-}
-.material-ui:hover {
-  background: rgba(25, 118, 210, 0.25);
+/* Technologies */
+.PyTorch {border: 0.1rem solid rgb(238, 89, 3);}
+.PyTorch:hover {background: rgba(238, 89, 3, 0.25);}
+.SpaCy {border: 0.1rem solid rgb(0, 0, 0);}
+.SpaCy:hover {background: rgba(0, 0, 0, 0.25);}
+.HuggingFace {border: 0.1rem solid rgb(255, 210, 70);}
+.HuggingFace:hover {background: rgba(255, 210, 70, 0.25);}
+.Transformers {border: 0.1rem solid rgb(13, 250, 49);}
+.Transformers:hover {background: rgba(13, 250, 49, 0.25);}
+.BERT {border: 0.1rem solid rgb(227, 250, 135);}
+.BERT:hover {background: rgba(227, 250, 135, 0.25);}
+.XGBoost {border: 0.1rem solid rgb(0, 0, 0);}
+.XGBoost:hover {background: rgba(0, 0, 0, 0.25);}
+.Logistic-Regression {border: 0.1rem solid rgb(0, 0, 0);}
+.Logistic-Regression:hover {background: rgba(0, 0, 0, 0.25);}
+.Neural-Network {border: 0.1rem solid rgb(170, 170, 248);}
+.Neural-Network:hover {background: rgba(170, 170, 248, 0.25);}
+.K-Means {border: 0.1rem solid rgb(0, 0, 0);}
+.K-Means:hover {background: rgba(0, 0, 0, 0.25);}
+.Apache-Spark {border: 0.1rem solid rgb(170, 170, 248);}
+.Apache-Spark:hover {background: rgba(170, 170, 248, 0.25);}
+.MySQL {border: 0.1rem solid rgb(144, 151, 252);}
+.MySQL:hover {background: rgba(144, 151, 252, 0.25);}
+.Tensorflow {border: 0.1rem solid rgb(239, 113, 113);}
+.Tensorflow:hover {background: rgba(239, 113, 113, 0.25);}
+.AWS {border: 0.1rem solid rgb(159, 161, 42);}
+.AWS:hover {background: rgba(159, 161, 42, 0.25);}
+.Python {border: 0.1rem solid rgb(240, 229, 7);}
+.Python:hover {background: rgba(94, 91, 2, 0.741);}
+.SQL {border: 0.1rem solid rgb(255, 118, 214);}
+.SQL:hover {background: rgba(255, 118, 214, 0.25);}
+.LangChain {border: 0.1rem solid rgb(2, 136, 29);}
+.LangChain:hover {background: rgb(5, 50, 1);}
+.GPT {border: 0.1rem solid rgb(0, 153, 255);}
+.GPT:hover {background: rgba(0, 153, 255, 0.25);}
+.Solr {border: 0.1rem solid rgb(159, 161, 42);}
+.Solr:hover {background: rgba(159, 161, 42, 0.25);}
+.GCP {border: 0.1rem solid rgb(170, 170, 248);}
+.GCP:hover {background: rgba(170, 170, 248, 0.25);}
+.Keras {border: 0.1rem solid rgb(237, 55, 61);}
+.Keras:hover {background: rgba(237, 55, 61, 0.25);}
+.Kubernetes {border: 0.1rem solid rgb(249, 115, 1);}
+.Kubernetes:hover {background: rgba(249, 115, 1, 0.25);}
+.Docker {border: 0.1rem solid rgb(245, 228, 121);}
+.Docker:hover {background: rgba(245, 228, 121, 0.25);}
+.Streamlit {border: 0.1rem solid rgb(0, 0, 0);}
+.Streamlit:hover {background: rgba(0, 0, 0, 0.25);}
+
+
+
+/* Skills */
+.Medical-Imaging {border: 0.1rem solid rgb(72, 86, 197);}
+.Medical-Imaging:hover {background: rgba(72, 86, 197, 0.25);}
+.Forecasting {border: 0.1rem solid rgb(235, 34, 46);}
+.Forecasting:hover {background: rgba(235, 34, 46, 0.25);}
+.Information-Retrieval {border: 0.1rem solid rgb(159, 161, 42);}
+.Information-Retrieval:hover {background: rgba(159, 161, 42, 0.25);}
+.TFM {border: 0.1rem solid rgb(32, 255, 147);}
+.TFM:hover {background: rgba(32, 255, 147, 0.25);}
+.TFG {border: 0.1rem solid rgb(32, 255, 147);}
+.TFG:hover {background: rgba(32, 255, 147, 0.25);}
+.Radiology {border: 0.1rem solid rgb(250, 110, 160);}
+.Radiology:hover {background: rgba(250, 110, 160, 0.25);}
+.Academic {border: 0.1rem solid rgb(32, 255, 147);}
+.Academic:hover {background: rgba(32, 255, 147, 0.25);}
+.NER {border: 0.1rem solid rgb(50, 25, 162);}
+.NER:hover {background: rgba(50, 25, 162, 0.25);}
+.GenAI {border: 0.1rem solid rgb(200, 0, 255);}
+.GenAI:hover {background: rgba(200, 0, 255, 0.25);}
+.English {border: 0.1rem solid rgb(32, 255, 147);}
+.English:hover {background: rgba(32, 255, 147, 0.25);}
+.LLM {border: 0.1rem solid rgb(0, 72, 255);}
+.LLM:hover {background: rgba(0, 72, 255, 0.25);}
+.NLP {border: 0.1rem solid rgb(0, 72, 255);}
+.NLP:hover {background: rgba(0, 72, 255, 0.25);}
+.Research {border: 0.1rem solid rgb(32, 255, 147);}
+.Research:hover {background: rgba(32, 255, 255, 0.25);}
+.Computer-Vision {border: 0.1rem solid rgb(240, 255, 160);}
+.Computer-Vision:hover {background: rgba(240, 255, 160, 0.25);}
+.Deep-Learning {border: 0.1rem solid rgb(0, 72, 255);}
+.Deep-Learning:hover {background: rgba(0, 72, 255, 0.25);}
+.CNN {border: 0.1rem solid rgb(240, 255, 160);}
+.CNN:hover {background: rgba(240, 255, 160, 0.25);}
+.MLOps {border: 0.1rem solid rgb(240, 255, 160);}
+.MLOps:hover {background: rgba(240, 255, 160, 0.25);}
+.Software-Design {border: 0.1rem solid rgb(43, 233, 173);}
+.Software-Design:hover {background: rgba(43, 233, 173, 0.25);}
+.PyPi {border: 0.1rem solid rgb(0, 51, 255);}
+.PyPi:hover {background: rgba(0, 51, 255, 0.25);}
+
+
+/* PDF */
+.react-pdf__Page__canvas {
+  margin: 0 auto;
+  width: 80% !important;
+  height: 100% !important;
 }
 
-.bulma {
-  border: 0.1rem solid rgb(0, 209, 178);
-}
-.bulma:hover {
-  background: rgb(0, 209, 178, 0.25);
-}
-
-.next {
-  border: 2px solid rgb(0, 112, 243);
-}
-.next:hover {
-  background: rgba(0, 112, 243, 0.25);
+/* Lists */
+ul, li {
+  margin:0;
+  padding:0;
+ list-style:none      
 }
 
-.tailwind {
-  border: 2px solid rgb(6, 182, 212);
-}
-.tailwind:hover {
-  background: rgba(6, 182, 212, 0.25);
+li {
+  padding-left:20px; 
 }
 
-.react-query {
-  border: 2px solid rgb(255, 65, 84);
-}
-.react-query:hover {
-  background: rgba(255, 65, 84, 0.25);
+li:nth-child(1):before {
+  content: "* " 
 }
 
-.css-modules {
-  border: 2px solid rgb(21, 114, 182);
+li:nth-child(2):before {
+  content: "* " 
 }
-.css-modules:hover {
-  background: rgba(21, 114, 182, 0.25);
+
+li:nth-child(3):before {
+  content: "* " 
+}
+
+li:nth-child(4):before {
+  content: "* " 
+}
+
+li:nth-child(5):before {
+  content: "* " 
+}
+
+/* Links colors */
+a {
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+a:visited {
+  color: var(--accent-color);
+  text-decoration: none;
+
 }
